--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+alembic==0.9.1
 click==6.7
 Flask==0.12
+Flask-Login==0.4.0
+Flask-Migrate==2.0.3
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.2
 itsdangerous==0.24
 Jinja2==2.9.5
+Mako==1.0.6
 MarkupSafe==1.0
+PyMySQL==0.7.10
+python-editor==1.0.3
+SQLAlchemy==1.1.6
 Werkzeug==0.12.1
+
